apps/frontend/flux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: registries
      containers:
        - name: frontend
          image: ghcr.io/likeon/geometa-frontend:main-038248ae-1791055301 # {"$imagepolicy": "geometa:frontend"}
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 2
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 5
            initialDelaySeconds: 1
            periodSeconds: 1
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: "700Mi"
              cpu: "1"
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
      name: http
