apps/frontend/flux/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - geometa-prod-frontend
